# priz-agent-python

./: .env.example  .gitignore  AI_ARCH.MD  CHANGELOG.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
alembic/mysql/: alembic.ini  env.py
alembic/postgres/: alembic.ini  env.py
config/: agents.yaml
docker/mysql/: init.sql
docker/prometheus/: prometheus.yml
prompts/: PROMPT_CHANGELOG.md
prompts/manager/: system.yaml
src/: main.py  settings.py
src/agents/: base.py  registry.py
src/api/: deps.py  middleware.py
src/core/: auth.py  caching.py  conflict.py  exceptions.py  guardrails.py  messages.py  response.py  state.py
src/grpc/: user_client.py
src/llm/: base.py  beeknoee.py  gemini.py  mock.py  registry.py  token_counter.py
src/memory/: condensation.py  entity_memory.py  long_term.py  short_term.py
src/nodes/: __init__.py  few_shot.py  meta_prompt.py  self_discovery.py  summarization.py
src/observability/: eval.py  metrics.py  setup.py
src/persistence/: checkpointer.py  database.py
src/scheduler/: __init__.py  setup.py
src/scripts/: index_knowledge_base.py
src/tools/: registry.py
tests/: test_health.py
tests/eval/: conftest.py  test_eval_docs_team.py  test_eval_knowledge_team.py  test_eval_research_team.py  test_eval_technical_team.py
tests/integration/: test_api_chat.py  test_docs_team.py  test_knowledge_team.py  test_manager_graph.py  test_research_team.py  test_technical_team.py
tests/load/: README.md  chat_stream.js
tests/unit/: test_core.py  (+7 more)
(+69 files in other folders)
