[project]
name = "pagent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "redis>=5.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tavily-python>=0.5",
    "mcp>=1.0",
    "pgvector>=0.3",
    "asyncpg>=0.29",
    "aiomysql>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.20",
    "apscheduler>=3.10,<4.0",
    "grpcio>=1.60",
    "tenacity>=8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "deepeval>=1.0",
    "grpcio-tools>=1.60",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
